docker/k8s/blazingdb_all.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: blazingdb-deployment
spec:
  selector:
    matchLabels:
      app: blazingdb
  replicas: 1
  template:
    metadata:
      labels:
        app: blazingdb
    spec:
      containers:
      - name: blazingdb
        #image: "blazingdb/blazingsql:latest"
        #image: "blazingdb/blazingsql:netflowdemo"
        #image: "blazingdb/blazingsql:demo"
        image: "blazingdb/blazingsql:test"
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /login
            port: 80
          periodSeconds: 1
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 10
        resources:
          limits:
            nvidia.com/gpu: 1 # requesting 1 GPU
