docker/k8s/blazingdb_orch_dep.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: blazingdb-orch-dep
spec:
  selector:
    matchLabels:
      app: blazingdb-orch
  replicas: 1
  template:
    metadata:
      labels:
        app: blazingdb-orch
    spec:
      volumes:
        - name: mi-volume
          persistentVolumeClaim:
            claimName: myclaim
      containers:
      - name: blazingdb-orch
        #image: "blazingdb/blazingsql:test"
        #image: "blazingdb/orchestator:latest"
        image: "blazingdb/blazingsql:orchestator"
        volumeMounts:
        - mountPath: /tmp
          name: mi-volume
        ports:
        - containerPort: 80
        #readinessProbe:
        #  httpGet:
        #    path: /login
        #    port: 80
        #  periodSeconds: 1
        #  timeoutSeconds: 1
        #  successThreshold: 1
        #  failureThreshold: 10
        #resources:
        #  limits:
        #    nvidia.com/gpu: 2 # requesting 1 GPU
