docker/k8s/blazingdb_svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: blazingdb-svc
spec:
  type: LoadBalancer
  selector:
    app: blazingdb
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
