docker/k8s/service_blazingdb.nodeport.yaml
kind: Service
apiVersion: v1
metadata:
  name: blazingdb-np-svc
spec:
  type: NodePort
  selector:
    app: blazingdb
  ports:
  - port: 80
