docker/k8s/blazingdb_ing.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: blazingdb-ing
  annotations:
    #nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.global-static-ip-name: "k8s-ingress"
spec:
  rules:
  - http:
      paths:
        - path: /*
          backend:
            serviceName: blazingdb-svc
            servicePort: 80
