docker/k8s/service_blazingdb.ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: blazingdb-ing-svc
  annotations:
    #nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.global-static-ip-name: "k8s-ingress"
spec:
  rules:
  - http:
      paths:
        - path: /*
          backend:
            serviceName: blazingdb-np-svc
            servicePort: 80
